[package]
name = "karics"
version = "0.1.5"
edition = "2024"
description = "A high-performance web framework for Rust with a focus on developer productivity and speed."
license = "Apache-2.0"
documentation = "https://docs.rs/karics"
repository = "https://github.com/kanari-network/karics"
homepage = "https://kanari.network"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"


log = "0.4.26"
itoa = "1.0.14"
bytes = "1.10.0"
httpdate = "1.0.3"
httparse = "1.10.0"
once_cell = "1.20.3"
regex = "1.11.1"
hyper = "1.6.0"
may = { version = "0.3.49", default-features = false }

[dev-dependencies]
atoi = "2.0.0"
num_cpus = "1.16.0"
smallvec = "1.14.0"
env_logger = "0.11.6"
serde_json = "1.0.139"

log = { version = "0.4.26", features = ["release_max_level_off"] }
yarte = { version = "0.15.7", features = ["bytes-buf", "json"] }
buf-min = { version = "0.7.1", features = ["bytes"] }

mimalloc = { version = "0.1.43", default-features = false }
nanorand = { version = "0.7.0", default-features = false, features = ["std", "wyrand"] }

[target.'cfg(unix)'.dev-dependencies]
may_postgres = { git = "https://github.com/kanari-network/may_postgres.git", default-features = false }

[features]
default = ["may/default"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false